# ComfyUI-AQnodes

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
nodes/api/: AQ_Cover.py  AQ_Gemini.py  AQ_SendImageToAPI.py  AQ_VideoFromImage.py  AQ_YouTubeUpload.py
nodes/blend/: AQ_BlendImages.py
nodes/clip/: AQ_CLIPSetLastLayer.py
nodes/filters/: AQ_filters.py
nodes/image/: AQ_Image.py
nodes/numbers/: AQ_Numbers.py
nodes/pulid/: AQ_MasksAndImagesAsList.py  AQ_multiface_ApplyPulidFlux.py
nodes/save/: AQ_SaveImageWebpReturnBase64.py
nodes/text_encoders/: AQ_TextEncodeQwenImage.py
nodes/transformers/: AQ_Qwen.py
prompts/: cover.md  song.md
